--- a/res/templates/teacher/dashboard.html
+++ b/res/templates/teacher/dashboard.html
@@ -1,5 +1,5 @@
 <div class="title-content">
-	<span class="title">Danh Sách Lớp</span>
+	<span class="title">Class list</span>
 </div>
 <div class="block-content overflow scrollbar">
 	<div class="content">
@@ -10,8 +10,8 @@
 			<thead>
 				<tr>
 					<th class="">ID</th>
-					<th class="">Tên Lớp</th>
-					<th class="">Khối</th>
+					<th class="">Class name</th>
+					<th class="">Grade</th>
 					<th class=""><i class="material-icons">settings</i></th>
 				</tr>
 			</thead>
