--- a/res/templates/teacher/class_detail.html
+++ b/res/templates/teacher/class_detail.html
@@ -1,5 +1,5 @@
 <div class="title-content">
-	<span class="title">Chi Tiết Lớp <span id="class_name_detail"></span></span>
+	<span class="title">Class detail <span id="class_name_detail"></span></span>
 </div>
 <div class="block-content overflow scrollbar">
 	<div class="content">
@@ -12,10 +12,10 @@
 					<th class="">ID</th>
 					<th class="">Avatar</th>
 					<th class="">Mã Học Sinh</th>
-					<th class="">Tên</th>
-					<th class="">Ngày Sinh</th>
-					<th class="">Giới Tính</th>
-					<th class="">Online Cuối</th>
+					<th class="">Name</th>
+					<th class="">Dob</th>
+					<th class="">Gender</th>
+					<th class="">Last online</th>
 					<th class=""><i class="material-icons">settings</i></th>
 				</tr>
 			</thead>
