--- a/res/templates/teacher/notifications.html
+++ b/res/templates/teacher/notifications.html
@@ -1,5 +1,5 @@
 <div class="title-content">
-	<span class="title">Quản Lý Thông Báo</span>
+	<span class="title">Notifications</span>
 </div>
 <div class="block-content overflow scrollbar">
 	<div class="preload hidden" id="preload">
@@ -8,13 +8,13 @@
 	<div class="content">
 		<div class="row col l12">
 			<div class="col l6 s12">
-				<h6>Thông Báo Đến Học Sinh</h6>
+				<h6>Notify to students</h6>
 				<hr>
 				<div id="student_content" class="notification_content overflow scrollbar">
 				</div>
 			</div>
 			<div class="col l6 s12">
-				<h6>Thông Báo Nhận Từ Admin</h6>
+				<h6>Received Notification from admin</h6>
 				<hr>
 				<div id="admin_content" class="notification_content overflow scrollbar">
 				</div>
@@ -27,9 +27,9 @@
 					<hr><br />
 					<div class="input-field">
 						<input type="text" id="notification_title" name="notification_title" required>
-						<label for="topic">Chủ đề</label>
+						<label for="topic">Topic</label>
 					</div>
-					<label for="content">Nội dung</label>
+					<label for="content">Content</label>
 					<textarea id="notification_content" class="materialize-textarea" name="notification_content" required></textarea>
 					<div class="input-field">
 						<select multiple id="class_id" name="class_id">
@@ -40,7 +40,7 @@
 		</div>
 		<div class="col l12 s12">
 			<div class="input-field" style="padding-bottom: 40px;">
-				<button name="send_teacher" type="submit" class="btn" style="width: 49%;" onclick="send_notification()">Gửi</button>
+				<button name="send_teacher" type="submit" class="btn" style="width: 49%;" onclick="send_notification()">Sent</button>
 				<button name="send_teacher" type="reset" class="btn" style="width: 49%;">Reset</button>
 			</div>
 		</div>
